--- a/index.html
+++ b/index.html
@@ -205,9 +205,9 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>GOVERNMENT OF TRIPURA</h1>
+            <p>GOVERNMENT OF TRIPURA</p>
             <p>OFFICE OF THE EXECUTIVE ENGINEER</p>
-            <p>BELONIA DIVISION, PV/Q1(R&B)</p>
+            <p>BELONIA DIVISION, PWD(R&B)</p>
             <p>BELONIA, SOUTH TRIPURA</p>
             
             <div class="memo-info">
@@ -333,7 +333,7 @@
 
         <div class="form-group">
             <label for="fundSource">The Expenditure will be made out of the total fund received from the</label>
-            <input type="text" id="fundSource" value="Deputy Secretary, PV/Q1(R&B), Vide memo No. F. 1022/PV/Q1(BSA)/2025. Dated, 12.08.2025">
+            <input type="text" id="fundSource" value="Deputy Secretary, PWD(R&B), Vide memo No. F. 1022/PV/Q1(BSA)/2025. Dated, 12.08.2025">
         </div>
 
         <div class="form-group">
@@ -345,7 +345,7 @@
             <div class="signature">
                 <p>(Er. Litan Debnath)</p>
                 <p>Executive Engineer</p>
-                <p>Belonia Division, PV/Q1(R&B)</p>
+                <p>Belonia Division, PWD(R&B)</p>
                 <p>Belonia, South Tripura</p>
             </div>
         </div>
