--- a/index.html
+++ b/index.html
@@ -371,8 +371,7 @@
         </div>
 
         <div class="form-group copy-section">
-            <label for="copyTo">Copy to:</label>
-            <input type="text" id="copyTo" value="The Treasury Officer, Belonia Treasury for kind information please.">
+            <label for="copyTo">Copy to: The Treasury Officer, Belonia Treasury for kind information please.</label>
         </div>
 
         <div class="controls no-print">
