--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@
   <div class="container">
     <div class="header">
       <p>GOVERNMENT OF TRIPURA</p>
-      <p class="strong">OFFICE OF THE EXECUTIVE ENGINEER</p>
-      <p class="strong">BELONIA DIVISION, PWD(R&B)</p>
+      <p><strong>OFFICE OF THE EXECUTIVE ENGINEER</strong></p>
+      <p><strong>BELONIA DIVISION, PWD(R&B)</strong></p>
       <p>BELONIA, SOUTH TRIPURA</p>
       <div class="memo-info">
         <div>
