--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sanction Memo</title>
+  <title>SANCTION MEMO</title>
   <style>
     * {
       box-sizing: border-box;
@@ -254,7 +254,7 @@
       </div>
     </div>
 
-    <h2 style="font-size: 16px; margin-bottom: 10px; text-align: center;">Sanction Memo</h2>
+    <h2 style="font-size: 16px; margin-bottom: 10px; text-align: center;">SANCTION MEMO</h2>
 
     <div class="sanction-text">
       Expenditure sanction is hereby accorded not exceeding an amount of Rs.
