--- a/index.html
+++ b/index.html
@@ -307,27 +307,27 @@
       <tbody>
         <tr>
           <td>1</td>
-          <td>Sanction this memo</td>
+          <td>Sanction this memo Amount</td>
           <td id="sanctionAmount">₹10,00,000.00</td>
         </tr>
         <tr>
           <td>2</td>
-          <td>Less Income Tax (-)</td>
+          <td>Less Income Tax</td>
           <td id="incomeTax">₹8,475.00</td>
         </tr>
         <tr>
           <td>3</td>
-          <td>Less SD (-)</td>
+          <td>Less Security Deposit</td>
           <td id="sd">₹25,000.00</td>
         </tr>
         <tr>
           <td>4</td>
-          <td>Less Labour Cess, Beneficiary ID-194646 (-)</td>
+          <td>Less Labour Cess, Beneficiary ID-194646</td>
           <td id="labourCess">₹10,000.00</td>
         </tr>
         <tr>
           <td>5</td>
-          <td>Less: GST (CGST+SGST) (-)</td>
+          <td>Less: GST (CGST+SGST)</td>
           <td id="gst">₹16,950.00</td>
         </tr>
         <tr>
@@ -354,7 +354,7 @@
         <tr>
           <td>9</td>
           <td>Payee:
-            <input type="text" id="payeeName" value="Sajal Biswas" style="width: 200px; display: inline;">
+            <input type="text" id="payeeName" value="Name" style="width: 200px; display: inline;">
           </td>
           <td id="netAmount">₹9,39,575.00</td>
         </tr>
@@ -367,7 +367,7 @@
 
     <div class="form-group">
       <label for="fundSource">The Expenditure will be made out of the total fund received from the</label>
-      <input type="text" id="fundSource" value="Deputy Secretary, PWD(R&B), Vide memo No. F. 1022/PV/Q1(BSA)/2025. Dated, 12.08.2025">
+      <input type="text" id="fundSource" value="Deputy Secretary, PWD(R&B), Vide memo No. F.1(02)/PWD(B&A)/2025, Dated, 19.09.2025">
     </div>
 
     <div class="form-group">
