--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 
     <div class="form-group">
       <label for="workName">Name of Work:</label>
-      <input type="text" id="workName" value="FDR / Nto. Of different roads under Rajnagar Sub-Division">
+      <input type="text" id="workName" value="Write Name of work">
     </div>
 
     <div class="form-group no-print">
